--- a/src/define/sponsors/sponsors.css
+++ b/src/define/sponsors/sponsors.css
@@ -11,10 +11,19 @@
     /* justify-content: space-between; */
 }
 
+.sponsorContainer {
+    max-width: 100%;
+    display: inline;
+}
+
 @media screen and (max-width: 768px) and (min-width: 425px) {
     .defineSponsors {
         padding: 25px 50px;
         padding-bottom: 150px;
+    }
+
+    .sponsorContainer {
+        max-width: 500px;
     }
 }
 
