--- a/src/define/theme/theme.css
+++ b/src/define/theme/theme.css
@@ -17,6 +17,7 @@
     font-weight: 100;
     letter-spacing: 0px;
     text-align: left;
+    max-width: 500px;
 }
 
 .defineTheme .benefits {
@@ -40,6 +41,10 @@
         /* background-color: aqua; */
         padding: 50px 50px;
         flex-direction: column;
+    }
+
+    .defineTheme .heroSectionA {
+        max-width: 500px;
     }
 
     .buttonContainer {
